# platformd-secretd

./: .gitignore  NEWS  PKGBUILD  README.md  meson.build
.github/workflows/: ci.yml
docs/: secret-service.md
man/: meson.build  platformd-secretd.service.xml  secretctl.xml
polkit/: io.platformd.secret1.policy
src/secret/: io.platformd.Secret.varlink  meson.build  secretctl.c  secretd.c  test-integration.sh  test-malformed-store.sh  test-vault.c  vault.c  vault.h
units/: org.freedesktop.secrets.service.in  platformd-secretd.service.in
